portfolio.html and images

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
 
     <section id="mainHeading">
-        <div class="top">top</div>
-        <div class="buffer-r">right</div>
-        <div class="bottom">bottom</div>
-        <div class="buffer-l">left</div>
-        <div class="content-l flex-row content-just-left item-align-center">
+        <div class="top"></div>
+        <div class="buffer-r bg-head-pri"></div>
+        <div class="bottom"></div>
+        <div class="buffer-l bg-head-pri"></div>
+        <div class="content-l flex-row content-just-left item-align-center bg-head-pri">
             <div>
-                <h2 id="h1Name">Robert Baird</h2>
+                <h2 class="mlr-0 mtb-0">Robert Baird</h2>
             </div>
         </div>
-        <div class="content-r flex-row content-just-right item-align-center"">
+        <div class="content-r flex-row content-just-right item-align-center bg-head-pri">
             <div class="linkList">
                 <ul>
                     <li><a href="index.html">About | </a></li>
